<resources>
    <string name="app_name">Lite Apps Subscriber</string>
    <string name="app_o1">রক্ত বা রক্তদান সম্পর্কিত বিস্তারিত জানতে এখানে Subscribe করুন...</string>
    <string name="app_02">আরবি, বাংলা, ইংরেজি দিন তারিখ জানতে এখানে Subscribe করুন...</string>
    <string name="app_03">বিসিএস (BCS) এর তথ্য বা প্রস্তুতি নিতে এখানে Subscribe করুন...</string>
    <string name="app_04">ইংরেজি  (English) শিখার টেকনিক , tips  জানতে এখানে Subscribe করুন...</string>
    <string name="app_05">মহান হাদীস প্রতিদিন আপনার মোবাইলে পেতে এখানে Subscribe করুন...</string>
    <string name="app_06">রান্না মজাদার করার ট্রিকস এবং টিপস  পেতে এখনই সাবস্ক্রাইব করুন</string>
    <string name="app_07">To get Jobs Circular Notification on your mobile Subscribe here...</string>
    <string name="app_08">রূপচর্চার বিভিন্ন ট্রিকস এবং টিপস  পেতে এখানে সাবস্ক্রাইব করুন... </string>
    <string name="app_description">কিছু ট্রিকস এবং টিপস আপনার কঠিন কাজকে সহজ করে দিতে পারে।এরকমই কিছু টিপস বা ট্রিকস  জানতে  অথবা প্রতিনিয়ত হাদীস, বাণী,  জোঁকস সহ গুরুত্তপূর্ণ মেসেজ  পেতে এখনই নিচের সাবস্ক্রাইব (Subscribe) বাটনে ক্লিক করুন।</string>
</resources>