<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="bold"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#F4DDDD"
        android:gravity="center_horizontal"
        android:text="Lite Apps Subscriber"
        android:textAlignment="center"
        android:textSize="30dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="20dp"
        android:text="@string/app_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="258dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="#00BCD4"
            android:fontFamily="cursive"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:text="@string/app_o1"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/app_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#FF0000"
            android:text="Subscribe"
            android:textColor="#FFFFFF" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="258dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="#00BCD4"
            android:fontFamily="cursive"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:text="@string/app_02"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/app_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#FF0000"
            android:text="Subscribe"
            android:textColor="#FFFFFF" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="258dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="#00BCD4"
            android:fontFamily="cursive"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:text="@string/app_03"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/app_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#FF0000"
            android:text="Subscribe"
            android:textColor="#FFFFFF" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="258dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="#00BCD4"
            android:fontFamily="cursive"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:text="@string/app_04"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/app_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#FF0000"
            android:text="Subscribe"
            android:textColor="#FFFFFF" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="258dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="#00BCD4"
            android:fontFamily="cursive"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:text="@string/app_05"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/app_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#FF0000"
            android:text="Subscribe"
            android:textColor="#FFFFFF" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="258dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="#00BCD4"
            android:fontFamily="cursive"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:text="@string/app_06"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/app_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#FF0000"
            android:text="Subscribe"
            android:textColor="#FFFFFF" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="258dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="#00BCD4"
            android:fontFamily="cursive"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:text="@string/app_07"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/app_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#FF0000"
            android:text="Subscribe"
            android:textColor="#FFFFFF" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="258dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="#00BCD4"
            android:fontFamily="cursive"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:text="@string/app_08"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/app_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#FF0000"
            android:text="Subscribe"
            android:textColor="#FFFFFF" />
    </LinearLayout>



</LinearLayout>